Switch it to fedora

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -114,8 +114,8 @@ button:hover {
     margin-right: 0;
 }
 
-#custom-apple {
-    font-family: "SF Pro Text";
+#custom-fedora {
+    font-family: "JetBrainsMono Nerd Font";
     font-size: 16px;
     padding: 0 10px;
     color: white;
