--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: FontAwesome;
     font-size: 13px;
 }
 
@@ -94,7 +94,9 @@ button:hover {
 #scratchpad,
 #power-profiles-daemon,
 #mpd {
-    padding: 0 10px;
+    padding: 0 0px;
+    margin-left: 6px;
+    margin-right: 6px;
     background-color: rgba(0, 0, 0, 0.0);
     color: #ffffff;
 }
@@ -113,7 +115,10 @@ button:hover {
 .modules-right > widget:last-child > #workspaces {
     margin-right: 0;
 }
-
+#tray {
+    background-color: transparent;
+    color: rgba(256, 256, 256, 0.0)
+}
 #custom-fedora {
     font-family: "JetBrainsMono Nerd Font";
     font-size: 16px;
@@ -154,7 +159,8 @@ button:hover {
 }
 
 #power-profiles-daemon {
-    padding-right: 15px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 #power-profiles-daemon.performance {
@@ -169,7 +175,7 @@ button:hover {
 
 #power-profiles-daemon.power-saver {
     background-color: rgba(0, 0, 0, 0.0);
-    color: #000000;
+    color: #FFFFFF;
 }
 
 label:focus {
@@ -242,9 +248,9 @@ label:focus {
     background-color: #eb4d4b;
 }
 
-#tray {
+/* #tray {
     background-color: #2980b9;
-}
+} */
 
 #tray > .passive {
     -gtk-icon-effect: dim;
