Work more on waybar

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,10 +2,13 @@
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: FontAwesome;
     font-size: 13px;
+    border-radius: 7px;
+    margin: 1 3px;
+    padding: 0 3px;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.0);
     border-bottom: 3px solid rgba(100, 114, 125, 0.0);
     color: #ffffff;
     transition-property: background-color;
@@ -13,12 +16,12 @@ window#waybar {
 }
 
 window#waybar.hidden {
-    opacity: 0.2
+    opacity: 0.0
 }
 
 /*
 window#waybar.empty {
-    background-color: transparent;
+    background-color: transparent;v
 }
 window#waybar.solo {
     background-color: #FFFFFF;
@@ -32,6 +35,11 @@ window#waybar.termite {
 window#waybar.chromium {
     background-color: #000000;
     border: none;
+}
+
+button:hover, #clock:hover, #custom-weather:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 0.2s ease;
 }
 
 button {
@@ -53,19 +61,22 @@ button:hover {
     background-color: #a37800;
 }
 
+#workspaces {
+    background-color: rgba(116, 222, 255, 0.5)
+}
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
-    color: #ffffff;
+    /* color: #ffffff; */
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.04);
 }
 
 #workspaces button.active {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    background-color: rgba(100, 114, 125, 0.00);
+    /* box-shadow: inset 0 -3px #ffffff; */
 }
 
 #workspaces button.urgent {
@@ -74,9 +85,12 @@ button:hover {
 
 #mode {
     background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    /* box-shadow: inset 0 -3px #ffffff; */
 }
 
+#custom-pronouns {
+    background-color: rgba(255, 225, 237, 0.5)
+}
 #clock,
 #battery,
 #cpu,
@@ -94,9 +108,12 @@ button:hover {
 #scratchpad,
 #power-profiles-daemon,
 #mpd {
-    padding: 0 0px;
-    margin-left: 6px;
-    margin-right: 6px;
+    /* padding: 0 0px; */
+    /* margin-left: 6px;
+    margin-right: 6px; */
+    /* background-image: linear-gradient(to right, rgba(251, 194, 235, 0.2), rgba(166, 193, 238, 0.2)); */
+    /* background-size: 100% 100%;
+    background-repeat: no-repeat; */
     background-color: rgba(0, 0, 0, 0.0);
     color: #ffffff;
 }
@@ -115,6 +132,7 @@ button:hover {
 .modules-right > widget:last-child > #workspaces {
     margin-right: 0;
 }
+
 #tray {
     background-color: transparent;
     color: rgba(256, 256, 256, 0.0)
@@ -124,6 +142,7 @@ button:hover {
     font-size: 16px;
     padding: 0 10px;
     color: white;
+    background-color: rgba(116, 222, 255, 0.5)
 }
 
 #clock {
@@ -188,7 +207,7 @@ label:focus {
 }
 
 #memory {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5)
 }
 
 #disk {
@@ -248,9 +267,9 @@ label:focus {
     background-color: #eb4d4b;
 }
 
-/* #tray {
-    background-color: #2980b9;
-} */
+#tray {
+    background-color: rgba(41, 128, 185, 0.0);
+}
 
 #tray > .passive {
     -gtk-icon-effect: dim;
