--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,10 +1,11 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome;
+    font-family: "FontAwesome";
     font-size: 13px;
     border-radius: 7px;
     margin: 1 3px;
-    padding: 0 3px;
+    padding: 0 4px;
+
 }
 
 window#waybar {
@@ -58,7 +59,7 @@ button:hover {
 
 /* you can set a style on hover for any module like this */
 #pulseaudio:hover {
-    background-color: #a37800;
+    /* background-color: #a37800; */
 }
 
 #workspaces {
@@ -87,9 +88,11 @@ button:hover {
     background-color: #64727D;
     /* box-shadow: inset 0 -3px #ffffff; */
 }
-
+#custom-weather {
+    background-color: rgba(255, 181, 214, 0.5)
+}
 #custom-pronouns {
-    background-color: rgba(255, 225, 237, 0.5)
+    background-color: rgba(255, 181, 214, 0.5)
 }
 #clock,
 #battery,
@@ -135,6 +138,8 @@ button:hover {
 
 #tray {
     background-color: transparent;
+    margin: 2 2px;
+    padding: 2 2px;
     color: rgba(256, 256, 256, 0.0)
 }
 #custom-fedora {
@@ -146,7 +151,7 @@ button:hover {
 }
 
 #clock {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(254, 140, 191, 0.5);
 }
 
 /* #battery {
@@ -178,22 +183,22 @@ button:hover {
 }
 
 #power-profiles-daemon {
-    padding-left: 0px;
-    padding-right: 0px;
+    /* padding-left: 0px;
+    padding-right: 0px; */
 }
 
 #power-profiles-daemon.performance {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
     color: #ffffff;
 }
 
 #power-profiles-daemon.balanced {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
     color: #ffffff;
 }
 
 #power-profiles-daemon.power-saver {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
     color: #FFFFFF;
 }
 
@@ -202,12 +207,12 @@ label:focus {
 }
 
 #cpu {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 181, 214, 0.5);
     color: #ffffff;
 }
 
 #memory {
-    background-color: rgba(255, 225, 237, 0.5)
+    background-color: rgba(255, 181, 214, 0.5)
 }
 
 #disk {
@@ -219,7 +224,7 @@ label:focus {
 }
 
 #network {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
 }
 
 #network.disconnected {
@@ -227,7 +232,7 @@ label:focus {
 }
 
 #pulseaudio {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
     color: #FFFFFF;
 }
 
@@ -260,7 +265,7 @@ label:focus {
 }
 
 #temperature {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
 }
 
 #temperature.critical {
@@ -281,7 +286,8 @@ label:focus {
 }
 
 #idle_inhibitor {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 225, 237, 0.5);
+    padding: 15px
 }
 
 #idle_inhibitor.activated {
@@ -356,4 +362,14 @@ label:focus {
 
 #privacy-item.audio-out {
     background-color: #0069d4;
+}
+
+#custom-power {
+    font-family: "JetBrainsMono Nerd Font";
+    background-color: rgba(116, 222, 255, 0.5)
+
+}
+
+#custom-spotlight {
+    background-color: rgba(116, 222, 255, 0.5)
 }
